# npttf2utf

./: .gitignore  README.md  __init__.py  map.json  setup.cfg
.github/workflows/: python-publish.yml
base/: docxhandler.py  fontmapper.py  preetimapper.py  txthandler.py
base/exceptions/: __init__.py
src/npttf2utf/: __init__.py  __main__.py  map.json
src/npttf2utf/base/: docxhandler.py  fontmapper.py  preetimapper.py  txthandler.py
src/npttf2utf/base/exceptions/: __init__.py
