[metadata]
name = npttf2utf
version = 0.3.7
description = Python module/script to map Nepali ASCII font faces like Preeti, Sagarmatha, and more to devanagari unicode with direct mapping support for docx and txt files.
long_description = file: README.md
long_description_content_type = text/markdown
author = Sabin Acharya
author_email = sabin2059@protonmail.com
url = https://github.com/trippygeese/npttf2utf
keywords = nepali unicode converter, unicode to preeti, preeti to unicode
license = GPL-3.0 License 

[options]
package_dir=
    =src
python_requires = >= 3.0
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    npttf2utf = npttf2utf:main
[options.packages.find]
where=src
